# MMGGA

./: CMakeLists.txt
data/gameObjects/: gameObject_test.json
data/scenes/: scene_Test.json
include/audio/: music.h  sound.h
include/engine/: component.h  config.h  engine.h  game_object.h  globals.h  log.h  scene.h  utility.h
include/graphics/: graphics.h  sprite.h  texture_manager.h
include/input/: input.h
include/physics/: physics.h
include/python/: python_engine.h
src/: main.cpp
src/audio/: music.cpp  sound.cpp
src/engine/: component.cpp  config.cpp  engine.cpp  game_object.cpp  log.cpp  scene.cpp  utility.cpp
src/graphics/: graphics.cpp  sprite.cpp  texture_manager.cpp
src/input/: input.cpp
src/physics/: physics.cpp
src/python/: MMGGA.py  python_engine.cpp
tests/: test_GameObjects.cpp  test_SFML.cpp  test_Scene.cpp  test_sprite.cpp  test_texture.cpp
